src/test/deca/syntax/invalid/obtained_res/wrongInstanceOfsynt.res
`> [1, 0] Program
   +> ListDeclClass [List with 0 elements]
   `> [1, 0] Main
      +> ListDeclVar [List with 1 elements]
      |  []> [2, 14] DeclVar
      |      +> [2, 4] Identifier (boolean)
      |      +> [2, 12] Identifier (x)
      |      `> [2, 16] Initialization
      |         `> [2, 16] InstanceOf
      |            +> [2, 16] Identifier (a)
      |            `> [2, 29] Identifier (A)
      `> ListInst [List with 0 elements]
